#52 Add sdrplay tuner support.